--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 	<link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
+<nav role="navigation">
 	<ul class="nav">
-  	<li><a href="#">Configurable</a></li><!--
- --><li><a href="#">Navigation</a></li><!--
- --><li><a href="#">With</a></li><!--
- --><li><a href="#">Sass</a></li>
+		<li><a href="#">Configurable</a></li><!--
+	 --><li><a href="#">Navigation</a></li><!--
+	 --><li><a href="#">With</a></li><!--
+ 	 --><li><a href="#">Sass</a></li>
 	</ul>
+</nav>	
 </body>
 </html>
