--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <nav role="navigation">
   <ul class="nav">
-    <li><a href="#">Configurable</a></li><!--
- --><li><a href="#">Navigation</a></li><!--
- --><li><a href="#">With</a></li><!--
- --><li><a href="#">Sass</a></li>
+    <li><a href="#" title="">Configurable</a></li><!--
+ --><li><a href="#" title="">Navigation</a></li><!--
+ --><li><a href="#" title="">With</a></li><!--
+ --><li><a href="#" title="">Sass</a></li>
   </ul>
 </nav>
 </body>
