Set your own path for the compiled stylesheet file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Simple configurable Sass navigation</title>
+  <!-- Set your own path for the compiled stylesheet file ;) -->
   <link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
